rss_ui.css
#rss_gadget {
	width: 95%;
	min-height: 150px;
	position: relative;
}

#body {
	margin-top: 20px;
	margin-bottom: 20px;
}

#header {
	height: 30px;
}

#footer {
	float: right;
	margin-right: 10px;
	position: absolute;
	top: 0px;
	right: -20px;
}

#link_to_rss {

}

.rssEntry {
	width: 100%;
	margin-bottom: 30px;
}

.entryTitle {
	width: 100%;
	font-size: 14px;
}

.entryDate {
	color: #444;
	width: 70%;
	display: inline-block;
	float: left;
	font-size: 12px;
}

.entryLink {
	width: 30%;
	display: inline-block;
	float: right;
	font-size: 12px;
	text-align: right;
}

.mainLink {
	margin-left: 5%;
	width: 60%;
	display: inline-block;
	text-align: center;
	height: 30px;
	font-size: 16px;
}

.mainImage {
	width: 50px;
	display: inline-block;
	float: left;
	margin-left: 10px;
	margin-top: 10px;
}

.mainImageWrapper {
	width: 25%;
	float: left;
	display: inline-block;
}

#saveButton {
	margin-left: 10px;
	margin-top: 10px;
}

#cancelButton {
	margin-left: 10px;
}

#editButton {
	margin-top: 10px;
}

#editButtonIcon {
	margin-top: 10px;
	margin-left: 10px;
	width: 22px;
	height: 22px;
	background-image: url('http://opensocialuser.github.io/settings_icon.png');
}

